Allow default to be used for IrisDimensions